--- a/jianli/css/style3.css
+++ b/jianli/css/style3.css
@@ -1,44 +1,77 @@
-﻿body {
-    width:90%;
-    max-width:900px;
-    margin:0 auto;
+﻿
+* {
+    font-size: 16px;
 }
 
-.head{
-    width:100%;
-    height:80px; 
-    background-color:gray;
-}
-h1 {
-    height: 80px;
-    align-content: center;
-    background-color: gray;
+.header {
+    width: 100%;
+    box-sizing: border-box;
+    background-color: grey;
+    padding: 16px;
 }
 
-.title{
-    display:table;
-    background-color:lightgray;
-    float:left;
-    clear:both;
-    width:20%;
-    height:100px;
-    border-bottom:1px solid white;
-}
-
-#span[id="1"]{
-    display:table-cell;
-    vertical-align:middle;
-}
-
-.detail {
-    float: left;
+.page {
     width: 80%;
-    height: 100px;
-    border-bottom: 1px solid grey;
-    display:block;
+    max-width: 900px;
+    margin: 0 auto;
 }
 
-div.eachItem {
-    width: 33%;
+.part1 p,
+.part2 p {
     display: inline-block;
+    margin-right: 40px;
+}
+
+em {
+    margin-right: 14px;
+    font-style: normal;
+    font: 700;
+}
+
+
+
+.part1, .part2, .part3, .part4, .part5{
+    zoom: 1;
+    border: 1px solid #eaeaea;
+}
+
+.main h2{
+    float: left;
+    box-sizing: border-box;
+    height: 120px;
+    line-height: 120px;
+    width: 100px;
+    text-align: center;
+    background-color: #d6d6d6;
+}
+
+.part1:after,
+.part2:after,
+.part3:after,
+.part4:after,
+.part5:after {
+    content: " ";
+    display: block;
+    clear: both;
+    height: 0;
+}
+
+.part3 h4,
+.part4 h4,
+.part5 h4 {
+    float: left;
+}
+
+body,
+h1,
+h2,
+h4,
+p {
+    margin: 0;
+    padding: 0;
+}
+
+.sectionBox {
+    padding: 20px;
+    margin-left: 110px;
 }
